[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/Rocket1.png" type="Texture" id=1]
[ext_resource path="res://Images/Rocket2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Rocket.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SmokeParticle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/SmokeParticleRed.png" type="Texture" id=5]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.389262, 0.798658, 0.993289, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.322148, 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "launching",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.766
height = 49.4041

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.8058

[node name="Rocket" type="RigidBody2D" groups=[
"rocket",
]]
collision_layer = 2
collision_mask = 2
mass = 10.0
gravity_scale = 0.0
angular_damp = 100.0
script = ExtResource( 3 )

[node name="EnginePuff" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 61.5183 )
rotation = 1.5708
texture = ExtResource( 5 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 1.1
scale_amount_random = 0.6
color_ramp = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "launching"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 1.41422, -32.8701 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="EnginePuff"]
